--- a/SBDajede/nbproject/project.properties
+++ b/SBDajede/nbproject/project.properties
@@ -27,22 +27,43 @@ dist.dir=dist
 dist.jar=${dist.dir}/SBDajede.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AbsoluteLayout.jar=dist\\lib\\AbsoluteLayout.jar
+file.reference.jcalendar-1.4.jar=dist\\lib\\jcalendar-1.4.jar
+file.reference.jcMousePanel-1.6.9.jar=dist\\lib\\jcMousePanel-1.6.9.jar
 file.reference.jcMousePanel.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\jcMousePanel.jar
+file.reference.JCPanel.jar=dist\\lib\\JCPanel.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=dist\\lib\\mysql-connector-java-5.1.45-bin.jar
+file.reference.RSButtonIconI.jar=dist\\lib\\RSButtonIconI.jar
 file.reference.RSPanelSlider.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\RSPanelSlider.jar
+file.reference.RSPanelSlider.jar-1=dist\\lib\\RSPanelSlider.jar
 file.reference.synthetica.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\synthetica.jar
+file.reference.synthetica.jar-1=dist\\lib\\synthetica.jar
 file.reference.syntheticaBlackEye.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaBlackEye.jar
+file.reference.syntheticaBlackEye.jar-1=dist\\lib\\syntheticaBlackEye.jar
 file.reference.syntheticaBlackMoon.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaBlackMoon.jar
+file.reference.syntheticaBlackMoon.jar-1=dist\\lib\\syntheticaBlackMoon.jar
 file.reference.syntheticaBlackStar.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaBlackStar.jar
+file.reference.syntheticaBlackStar.jar-1=dist\\lib\\syntheticaBlackStar.jar
 file.reference.syntheticaBlueIce.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaBlueIce.jar
+file.reference.syntheticaBlueIce.jar-1=dist\\lib\\syntheticaBlueIce.jar
 file.reference.syntheticaBlueMoon.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaBlueMoon.jar
+file.reference.syntheticaBlueMoon.jar-1=dist\\lib\\syntheticaBlueMoon.jar
 file.reference.syntheticaBlueSteel.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaBlueSteel.jar
+file.reference.syntheticaBlueSteel.jar-1=dist\\lib\\syntheticaBlueSteel.jar
 file.reference.syntheticaGreenDream.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaGreenDream.jar
+file.reference.syntheticaGreenDream.jar-1=dist\\lib\\syntheticaGreenDream.jar
 file.reference.syntheticaMauveMetallic.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaMauveMetallic.jar
+file.reference.syntheticaMauveMetallic.jar-1=dist\\lib\\syntheticaMauveMetallic.jar
 file.reference.syntheticaOrangeMetallic.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaOrangeMetallic.jar
+file.reference.syntheticaOrangeMetallic.jar-1=dist\\lib\\syntheticaOrangeMetallic.jar
 file.reference.syntheticaSilverMoon.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaSilverMoon.jar
+file.reference.syntheticaSilverMoon.jar-1=dist\\lib\\syntheticaSilverMoon.jar
 file.reference.syntheticaSimple2D.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaSimple2D.jar
+file.reference.syntheticaSimple2D.jar-1=dist\\lib\\syntheticaSimple2D.jar
 file.reference.syntheticaSkyMetallic.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaSkyMetallic.jar
+file.reference.syntheticaSkyMetallic.jar-1=dist\\lib\\syntheticaSkyMetallic.jar
 file.reference.syntheticaWhiteVision.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\look and feel\\syntheticaWhiteVision.jar
+file.reference.syntheticaWhiteVision.jar-1=dist\\lib\\syntheticaWhiteVision.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -62,7 +83,28 @@ javac.classpath=\
     ${file.reference.syntheticaWhiteVision.jar}:\
     ${file.reference.jcMousePanel.jar}:\
     ${file.reference.RSPanelSlider.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.synthetica.jar-1}:\
+    ${file.reference.syntheticaBlackEye.jar-1}:\
+    ${file.reference.syntheticaBlackMoon.jar-1}:\
+    ${file.reference.syntheticaBlackStar.jar-1}:\
+    ${file.reference.syntheticaBlueIce.jar-1}:\
+    ${file.reference.syntheticaBlueMoon.jar-1}:\
+    ${file.reference.syntheticaBlueSteel.jar-1}:\
+    ${file.reference.syntheticaGreenDream.jar-1}:\
+    ${file.reference.syntheticaMauveMetallic.jar-1}:\
+    ${file.reference.syntheticaOrangeMetallic.jar-1}:\
+    ${file.reference.syntheticaSilverMoon.jar-1}:\
+    ${file.reference.syntheticaSimple2D.jar-1}:\
+    ${file.reference.syntheticaSkyMetallic.jar-1}:\
+    ${file.reference.syntheticaWhiteVision.jar-1}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.JCPanel.jar}:\
+    ${file.reference.RSButtonIconI.jar}:\
+    ${file.reference.RSPanelSlider.jar-1}:\
+    ${file.reference.jcMousePanel-1.6.9.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
