Actualización modificacion de: -clase usuario metodo insertar -encriptacion MD5. Agregado: -Ya agrega usuarios a la BD

--- a/SBDajede/nbproject/project.properties
+++ b/SBDajede/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/SBDajede.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AbsoluteLayout.jar=dist\\lib\\AbsoluteLayout.jar
+file.reference.commons-codec-1.11.jar=dist\\lib\\commons-codec-1.11.jar
 file.reference.jcalendar-1.4.jar=dist\\lib\\jcalendar-1.4.jar
 file.reference.jcMousePanel-1.6.9.jar=dist\\lib\\jcMousePanel-1.6.9.jar
 file.reference.jcMousePanel.jar=C:\\Users\\Nahomi\\Desktop\\librerias\\jcMousePanel.jar
@@ -104,7 +105,8 @@ javac.classpath=\
     ${file.reference.RSPanelSlider.jar-1}:\
     ${file.reference.jcMousePanel-1.6.9.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${file.reference.commons-codec-1.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
