Actualización Agregado: -Clase nivel de estudio -Metodo en la clase usuario llamado puestos Modificacion: -Inserción de usuario.
También comente todas los metodos.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -52,4 +52,4 @@ file.reference.syntheticaSkyMetallic.jar-2=C:\\Users\\alexd\\Desktop\\Librer\u00
 file.reference.syntheticaWhiteVision.jar=C:\\Users\\alexd\\Desktop\\Librer\u00edas\\syntheticaWhiteVision.jar
 file.reference.syntheticaWhiteVision.jar-1=C:\\Users\\alexd\\Desktop\\Librer\u00edas\\syntheticaWhiteVision.jar
 file.reference.syntheticaWhiteVision.jar-2=C:\\Users\\alexd\\Desktop\\Librer\u00edas\\syntheticaWhiteVision.jar
-user.properties.file=C:\\Users\\alexd\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\mynor\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
